--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <main id="hero">
         <div class="container col-xxl-8 px-4 py-5">
             <h1 class="text-center mb-3">Contact Me</h1>
-            <form name="ToDo-ContactForm" method="post" data-netlify-recaptcha="true" data-netlify="true">
+            <form name="ToDo-ContactForm" method="POST" data-netlify-recaptcha="true" data-netlify="true">
                 <div class="row mb-1">
                     <div class="col">
                         <label class="form-label">First Name</label>
@@ -94,5 +94,4 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
 </body>
-
 </html>
